chore: add mockk dependency